--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
   <link rel="stylesheet" href="./index.css" />
 
-  <title>Hello Electron</title>
+  <title>Desktop Editor</title>
 </head>
 <body class="container">
   <h1>
