add menu, dark mode, and modularized

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="actions">
     <button id="btn_like">👍 Looks Good</button>
     <button id="btn_dislike">👎 Don't Get It</button>
-    <span style="display: inline-block; width: 1em; height: 1em;"></span>
+    <span class="action-sep"></span>
     <button id="btn_lookup">Look up ./assets</button>
   </div>
   <pre id="output" class="output"></pre>
